[package]
name = "common"
version = "0.0.1"
authors = ["https://github.com/Kint0Sens"]
edition = "2018"
description = "InterBTC command line tools - Common functions"

[features]
integration = []
standalone-metadata = ["runtime/standalone-metadata"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]
parachain-metadata-testnet = ["runtime/parachain-metadata-testnet"]

[dependencies]
log = "0.4.6"
env_logger = "0.9.0"
async-trait = "0.1.40"
# tracing = { version = "0.1", features = ["log"] }
clap = "3.1"
# tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
# git-version = "0.3.4"
cfg-if = "1.0"
bdk = "0.16.0"
pad = "0.1.6"

# Workspace dependencies
runtime = { path = "../../runtime" }
bitcoin = { path = "../../bitcoin" }

[dependencies.primitives]
git = "https://github.com/interlay/interbtc"
rev = "2a81e9950beeace96d15d8da65282f548632e585"
package = "interbtc-primitives"

[dev-dependencies]

# Workspace dependencies
runtime = { path = "../../runtime", features = ["testing-utils"] }
bitcoin = { path = "../../bitcoin", features = ["cli"] }

