[package]
name = "common"
version = "0.0.1"
authors = ["https://github.com/Kint0Sens"]
edition = "2018"
description = "InterBTC command line tools - Common functions"

[features]
integration = []
standalone-metadata = ["runtime/standalone-metadata"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]
parachain-metadata-testnet = ["runtime/parachain-metadata-testnet"]

[dependencies]
log = "0.4.6"
env_logger = "0.9.0"
async-trait = "0.1.40"
tracing = { version = "0.1", features = ["log"] }
clap = "3.1"
# tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
# git-version = "0.3.4"
cfg-if = "1.0"
bdk = "0.16.0"
pad = "0.1.6"

# Workspace dependencies
runtime = { path = "../../runtime" }
bitcoin = { path = "../../bitcoin" }
bitcoincore-rpc = { git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc", rev = "d9a1dd014f8eff8b00618457bb6b845c8b932bb7" }
# esplora-btc-api = "1.0.3"
bitcoin_hashes = { version = "0.7.3", default-features = false }
secp256k1 = { package = "secp256k1", git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "8e61874", default-features = false }
serde = { version = "1.0.130" }
impl-serde = { version = "0.3.1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
spin = { version = "0.7.1", default-features = false }
sha2 = { version = "0.8.2", default-features = false }

[dependencies.primitives]
git = "https://github.com/interlay/interbtc"
rev = "f27a87b1ba4407614b1be1b87e715686c7ac237f"
package = "interbtc-primitives"


[dev-dependencies]

# Workspace dependencies
runtime = { path = "../../runtime", features = ["testing-utils"] }
bitcoin = { path = "../../bitcoin", features = ["cli"] }

