[package]
name = "common"
version = "0.0.2"
authors = ["https://github.com/Kint0Sens"]
edition = "2018"
description = "InterBTC command line tools - Common functions"

[features]
integration = []
standalone-metadata = ["runtime/standalone-metadata"]
parachain-metadata-kintsugi = ["runtime/parachain-metadata-kintsugi"]
parachain-metadata-interlay = ["runtime/parachain-metadata-interlay"]
parachain-metadata-kintsugi-testnet = ["runtime/parachain-metadata-kintsugi-testnet"]
parachain-metadata-interlay-testnet = ["runtime/parachain-metadata-interlay-testnet"]

[dependencies]
log = "0.4.6"
env_logger = "0.9.0"
async-trait = "0.1.40"
tracing = { version = "0.1", features = ["log"] }
clap = "3.1"
# tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
# git-version = "0.3.4"
cfg-if = "1.0"
# bdk = "0.16.0"
pad = "0.1.6"
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }

# Workspace dependencies
runtime = { path = "../../runtime" }
bitcoin = { path = "../../bitcoin" }
bitcoincore-rpc = { git = "https://github.com/rust-bitcoin/rust-bitcoincore-rpc", rev = "d9a1dd014f8eff8b00618457bb6b845c8b932bb7" }
# esplora-btc-api = "1.0.3"
bitcoin_hashes = { version = "0.7.3", default-features = false }
secp256k1 = { package = "secp256k1", git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "8e61874", default-features = false }
serde = { version = "1.0.130" }
impl-serde = { version = "0.3.1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
spin = { version = "0.7.1", default-features = false }
sha2 = { version = "0.8.2", default-features = false }

[dependencies.primitives]
git = "https://github.com/interlay/interbtc"
rev = "2ddb5eba6fdb42125805bf15d8a4caf30556e0ab"
package = "interbtc-primitives"


[dev-dependencies]

# Workspace dependencies
runtime = { path = "../../runtime", features = ["testing-utils"] }
bitcoin = { path = "../../bitcoin", features = ["cli"] }
