[package]
name = "redeem"
version = "0.0.2"
authors = ["https://github.com/Kint0Sens"]
edition = "2018"
description = "InterBTC command line tools - Redeem"

[dependencies]
log = "0.4.6"
env_logger = "0.9.0"
tracing = { version = "0.1", features = ["log"] }
clap = "3.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
git-version = "0.3.4"

# Workspace dependencies
runtime = { path = "../../runtime" }
bitcoin = { path = "../../bitcoin" }
common = { path = "../common" }

[dev-dependencies]

# Workspace dependencies
runtime = { path = "../../runtime", features = ["testing-utils"] }
bitcoin = { path = "../../bitcoin", features = ["cli"] }

