[package]
name = "redeemer"
version = "0.0.3"
authors = ["https://github.com/Kint0Sens"]
edition = "2018"
description = "InterBTC Premium Bot - Redeem"

[dependencies]
log = "0.4.6"
env_logger = "0.9.0"
tracing = { version = "0.1", features = ["log"] }
clap = "3.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
git-version = "0.3.4"
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "hostname", "r2d2", "builder"] }

# Workspace dependencies
runtime = { path = "../../runtime" }
bitcoin = { path = "../../bitcoin" }
common = { path = "../../cli/common" }

[dependencies.module-oracle-rpc-runtime-api]
git = "https://github.com/interlay/interbtc"
rev = "2ddb5eba6fdb42125805bf15d8a4caf30556e0ab"
package = "module-oracle-rpc-runtime-api"


[dev-dependencies]

# Workspace dependencies
runtime = { path = "../../runtime", features = ["testing-utils"] }
bitcoin = { path = "../../bitcoin", features = ["cli"] }

